Dockerfile order-service